<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CalaPalamos</string>
    <string name="action_">Register</string>
    <string name="action_refresh">Refresh</string>
    <string name="homeimg">Login/Register icon</string>
    <string name="name">UserName</string>
    <string name="passwd">Password</string>
    <string name="textBtnLogin">Login</string>
    <string name="textBtnReg">Register</string>
    <string name="textBtnCancel">Cancel</string>
    <string name="regLink">New to LaFosca? Register here</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_options">OptionsActivity</string>
    <string name="action_about">About</string>
    <string name="opt_ch">Opciones:</string>
    <string name="opt_btncancel">Cerrar</string>
    <string name="title_activity_tab1_state">Tab1State</string>
    <string name="title_activity_tab2_opt">Tab2Opt</string>
    <string name="tab_1">State</string>
    <string name="tab_2">Options</string>
    <string name="state_text">Estado:</string>
    <string name="cstate_text">Cambiar Estado</string>
    <string name="flag_text">Bandera:</string>
    <string name="cflag_text">Cambiar Bandera</string>
    <string name="nivea_text">Lanzar Balones:</string>
    <string name="throw_text">Lanzar</string>
    <string name="clean_text">Limpiar</string>
    <string name="happy_text">Felicidad:</string>
    <string name="dirty_text">Suciedad:</string>
    <string name="kids_text">Listado de Niños</string>
    <string name="title_activity_mi_tab_listener">MiTabListener</string>
    <string name="change_state">Cambiar</string>
    <string name="check_green">Green</string>
    <string name="check_yellow">Yellow</string>
    <string name="check_red">Red</string>
    <string name="title_activity_kids_list">KidsListActivity</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_close">Close</string>
    <string name="textPress">Presión Atmosférica:</string>
    <string name="textHum">Humedad:</string>
    <string name="textWind">Viento:</string>
    <string name="contImgWe">Weather Image</string>
</resources>    